[gd_scene load_steps=9 format=3 uid="uid://cfdmv3tit4bya"]

[ext_resource type="Material" uid="uid://nr1aonkdhljc" path="res://materials/color_change_material.tres" id="1_0sthy"]
[ext_resource type="Script" uid="uid://nm47gpvpqj3n" path="res://scripts/levels/components/Doorway.gd" id="1_2dsri"]
[ext_resource type="Texture2D" uid="uid://4wbrxxr14y2u" path="res://art/images/doorway.png" id="2_4alx2"]
[ext_resource type="Script" uid="uid://biavc87qbm2lf" path="res://scenes/levels/components/arrow.gd" id="2_opvuc"]
[ext_resource type="Texture2D" uid="uid://hakrb3cpb3t8" path="res://art/images/arrow.png" id="3_04haj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a58qw"]
size = Vector2(20, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7o1mq"]
size = Vector2(20, 43)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wtmes"]
size = Vector2(36, 51)

[node name="Doorway" type="CharacterBody2D" groups=["Exit"]]
material = ExtResource("1_0sthy")
collision_layer = 0
collision_mask = 48
motion_mode = 1
script = ExtResource("1_2dsri")

[node name="DoorFrame" type="Sprite2D" parent="."]
use_parent_material = true
texture = ExtResource("2_4alx2")
offset = Vector2(0, -16)

[node name="Arrow" type="Sprite2D" parent="."]
visible = false
use_parent_material = true
position = Vector2(0, -42)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("3_04haj")
script = ExtResource("2_opvuc")
amp = 6.0
freq = 1.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 14.5)
shape = SubResource("RectangleShape2D_a58qw")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_7o1mq")

[node name="RenderArea" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="RenderArea"]
position = Vector2(0, -9.5)
shape = SubResource("RectangleShape2D_wtmes")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="area_entered" from="RenderArea" to="." method="_on_render_area_area_entered"]
[connection signal="area_exited" from="RenderArea" to="." method="_on_render_area_area_exited"]
